# FinRL

./: .gitattributes  .gitignore  AGENTS.md  CONSISTENCY_AUDIT.md  DATASET_AUDIT.md  IMPLEMENTATION_FREEZE.md  MANUSCRIPT_PLAN.md  PAPER_BLUEPRINT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_FREEZE_REPORT.md  PROJECT_HANDOFF.md  PROJECT_IMPLEMENTATION_REFERENCE.md  PROJECT_STATE.md  README.md  RESULTS_AUDIT.md  pyproject.toml  requirements.txt  setup.py
docs/architecture/: AGENTS.md  ARCHITECTURE.md  CONFIDENCE_FUSION.md  DECISIONS.md  FINRL_MAPPING.md  INTERFACE_CONTRACTS.md  MODULE_SPECIFICATIONS.md  SYSTEM_WORKFLOW.md
docs/implementation/: CODING_STANDARDS.md  DIRECTORY_STRUCTURE.md  OPENCODE.md  PROMPT_HISTORY.md  TESTING_STRATEGY.md
docs/planning/: CURRENT_STATE.md  HANDOFF.md  IMPLEMENTATION_ROADMAP.md  TASKS.md
docs/research/: BASELINE_ANALYSIS.md  (+2 more)
experiments/: _ablations.py  _audit_check.py  _baselines.py  _config.py  _consistency_audit.py  _data_cache.py  _dynamic_verify.py  _evaluate.py  _final_stats.py  _fix_fig02.py  _generate_publication_plots.py  _phase3_checks.py  _pipeline.py  _plotting.py  _publication_outputs.py  _research_report.py  _utils.py  _verify_all.py  _verify_env.py  _walk_forward.py  dynamic_verify_log.txt  dynamic_verify_report.txt  reproducibility_manifest.json  run_ablations.py  run_all.py  run_baselines.py  run_ca_marl.py  run_campaign.py  run_plots.py
finrl/: __init__.py
manuscript/: availability.md  discussion.md  experimental_setup.md  limitations.md  methodology.md  references.md  results.md  threats_to_validity.md
(+41 files in other folders)
