[tool.poetry]
name = "ca-marl"
version = "2.0.0"
description = "CA-MARL: Confidence-Aware Multi-Agent Reinforcement Learning for Portfolio Decision Support"
authors = ["CA-MARL Contributors"]
license = "MIT"

readme = "README.md"
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Office/Business :: Financial",
    ]
keywords=["Reinforcement Learning", "Finance", "Portfolio Management", "Confidence Calibration"]

[tool.poetry.urls]
repository = "https://github.com/anonymous/ca-marl"

[tool.poetry.dependencies]
python = "^3.11"
elegantrl = {git="https://github.com/AI4Finance-Foundation/ElegantRL.git#egg=elegantrl"}
pyfolio-reloaded = "^0.9"
scikit-learn = "^1"
stable-baselines3 = ">=2.9.0"
stockstats = "^0.5"
yfinance = "^0.2"

[tool.poetry.group.dev.dependencies]
black = "^24"
isort = "^5"
jupyter = "^1"
mypy = "^1"
pandas-stubs = "^2"
pytest = "^9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
